--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
   <head>
     <title>Home Page</title>
+    <link rel="stylesheet" href="demo.css" type="text/css">
+    <script type="text/javascript" src="demo.js"></script>
   </head>
   <body>
     <h1>Home Page</h1>
